--- a/WebApp/ClientApp/src/custom.css
+++ b/WebApp/ClientApp/src/custom.css
@@ -12,3 +12,13 @@ code {
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
+
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  text-align: center;
+}
+
+th, td {
+  padding: 15px;
+}
