--- a/WebApp/ClientApp/src/custom.css
+++ b/WebApp/ClientApp/src/custom.css
@@ -13,12 +13,6 @@ code {
   border-color: #1861ac;
 }
 
-table, th, td {
-  border: 1px solid black;
-  border-collapse: collapse;
-  text-align: center;
-}
-
-th, td {
-  padding: 15px;
+.center-pagination {
+  margin: auto;
 }
